--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -75,7 +75,7 @@ body:
     id: logs
     attributes:
       label: Console Logs / Error Messages (Optional)
-      description: Add logs only if relevant. Leave empty if not applicable.
+      description: Add logs from the file or web console. Leave empty if not applicable.
       render: shell
     validations:
       required: false
